change colour scheme of reviews page to suit rest of website and to avoid color contrast from wave

--- a/assets/css/reviews.css
+++ b/assets/css/reviews.css
@@ -10,14 +10,14 @@
     left: 25px;    
     text-decoration: none;
     font-size: 30px;
-    color: #fff;
+    color: rgb(89, 90, 90);
     
 }
 
 
 
 body {
-    background-color: rgba(50, 190, 240);
+    background-color: rgba(50, 190, 240, 0.5);
     font-family: 'Montserrat Alternates', sans-serif;
     display: flex;
     flex-direction: column;
@@ -30,7 +30,7 @@ body {
 }
 
 .testimonial-container {
-    background-color: rgb(18, 140, 184);
+    background-color: rgb(89, 90, 90);
     color: #fff;
     border-radius: 15px;
     margin: 20px auto;
