--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color:#f5f5f5;
+    background-color: #fafafa;
     color: #444;
     font-family: 'Montserrat Alternates', sans-serif;
     display: flex;
